--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "nodemailer": "^6.4.17",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "stripe": "^8.132.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
