--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
+    "redux-promise-middleware": "^6.1.2",
     "stripe": "^8.132.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
